dist_man1_MANS=

if BUILD_QUFFEND
  dist_man1_MANS+=quffend.1
endif

if ENABLE_QT
  dist_man1_MANS+=quffen-qt.1
endif

if BUILD_QUFFEN_CLI
  dist_man1_MANS+=quffen-cli.1
endif

if BUILD_QUFFEN_TX
  dist_man1_MANS+=quffen-tx.1
endif

if BUILD_QUFFEN_UTIL
  dist_man1_MANS+=quffen-util.1
endif

if ENABLE_WALLET
if BUILD_QUFFEN_WALLET
  dist_man1_MANS+=quffen-wallet.1
endif
endif
